<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Group Photo Sync</string>
    
    <!-- Home -->
    <string name="home_start">Start Connecting</string>
    <string name="home_stop">Stop Connecting</string>
    <string name="home_nearby">Connected With:</string>
    <string name="home_take_picture">Camera</string>
    <string name="home_info">Photos you take now will be shared with the people above</string>
    
    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_require_verified">Require Verification</string>
    <string name="summary_require_verified">Only connect to users who have a verified email</string>
    <string name="title_require_in_contacts">Require In Contacts</string>
    <string name="summary_require_in_contacts">Only connect to users who are in your contacts</string>
    
    <!-- Help -->
    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="help_instructions_title">Instructions:</string>
    <string name="help_instructions_text">
        This app scans for nearby friends.        
        When it finds someone, you are connected - any photos you take will be automatically sent to them, and you will receive their photos.
        You can access the photos from the notification bar or from your gallery.
        To stop sharing, click the Stop Connecting button.
        After 15 minutes the app will automatically stop sharing.</string>
    <string name="help_about_title">About:</string>
    <string name="help_about_text">Version: 0.1</string>
    <string name="help_contact_developer">Contact Developer</string>
    
    <!-- Login -->
    <string name="login_prompt_name">Name (Optional)</string>
    <string name="login_prompt_email">Email</string>
    <string name="login_start">Start</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="title_activity_login">Group Photo Sync</string>
</resources>